# url-shortener

./: .gitignore  README.md
.github/workflows/: pipeline.yml
backend/: Dockerfile  __init__.py  __main__.py  app.py  pyproject.toml  rate_limiter.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Hero.tsx  Navbar.tsx
frontend/src/pages/: Home.tsx  Login.tsx  Signup.tsx
iac_tf/: main.tf  providers.tf
iac_tf/modules/api_gw/: main.tf  variables.tf
iac_tf/modules/dynamodb/: main.tf
iac_tf/modules/ec2/: main.tf  outputs.tf  variables.tf
iac_tf/modules/elasticache/: main.tf  variables.tf
iac_tf/modules/vpc/: main.tf  outputs.tf  variables.tf
