[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Python backend to shorten website urls"
authors = ["Akash Suvarna and Mmesoma David"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
boto3 = "^1.35.34"
flask-limiter = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

